--- a/60-verses/am/index.html
+++ b/60-verses/am/index.html
@@ -5,6 +5,7 @@
 					 <div data-role="collapsible">
 						 <h3>ክርስቶስ የህይወቴ ዋና - 2 ቆሮንጦስ 5:17</h3>
 						 <p>ስለዚህ ማንም በክርስቶስ ቢሆን አዲስ ፍጥረት ነው፤ አሮጌው ነገር ዐልፏል፤ እነሆ፤ አዲስ ሆኗል።</p>
+						 <button class="copy-btn" onclick="copyVerse(this)">Copy Verse</button>
 					 </div>
 					 <div data-role="collapsible">
 						 <h3>ክርስቶስ የህይወቴ ዋና - ገላትያ 2፡20</h3>
