--- a/60-verses/am/index.html
+++ b/60-verses/am/index.html
@@ -10,10 +10,13 @@
 					 <div data-role="collapsible">
 						 <h3>ክርስቶስ የህይወቴ ዋና - ገላትያ 2፡20</h3>
 						 <p>ከእንግዲህ እኔ አልኖርም፤ ነገር ግን ክርስቶስ በውስጤ ይኖራል። አሁንም በሥጋ የምኖረው ኑሮ በወደደኝና ስለ እኔ ራሱን አሳልፎ በሰጠው በእግዚአብሔር ልጅ ላይ ባለኝ እምነት ነው።</p>
+						 <button class="copy-btn ui-btn ui-btn-inline ui-mini">Copy Verse</button>
 					 </div>
 					 <div data-role="collapsible">
 						 <h3>ለጌታ ታዛዥ - ሮሜ 12፡1</h3>
 						 <p>እንግዲህ ወንድሞች ሆይ፤ ሰውነታችሁን ቅዱስና እግዚአብሔርን ደስ የሚያሰኝ ሕያው መሥዋዕት አድርጋችሁ ታቀርቡ ዘንድ በእግዚአብሔር ርኅራኄ እለምናችኋለሁ፤ ይህም እንደ ባለ አእምሮ የምታቀርቡት አምልኳችሁ ነው።</p>
+						 <button class="copy-btn ui-btn ui-btn-inline ui-mini">Copy Verse</button>
+
 					 </div>
 					 <div data-role="collapsible">
 						 <h3>ለጌታ ታዛዥ - ዮሐንስ 14፡21</h3>
