--- a/5-assurance/am/index.html
+++ b/5-assurance/am/index.html
@@ -7,6 +7,7 @@
       ይህም ሕይወት ያለው በልጁ ነው። ልጁ ያለው ሕይወት አለው፤
       የእግዚአብሔር ልጅ የሌለው ሕይወት የለውም።
     </p>
+    <button class="copy-btn ui-btn ui-btn-inline ui-mini ui-corner-all ui-icon-action ui-btn-icon-left">Copy</button>
   </div>
 
   <div data-role="collapsible">
@@ -15,6 +16,7 @@
       እስከ አሁን በስሜ ምንም አልለመናችሁም፤
       ለምኑ ትቀበላላችሁ፤ ደስታችሁም ሙሉ ይሆናል።
     </p>
+    <button class="copy-btn ui-btn ui-btn-inline ui-mini ui-corner-all ui-icon-action ui-btn-icon-left">Copy</button>
   </div>
 
   <div data-role="collapsible">
@@ -25,6 +27,7 @@
       ከምትችሉት በላይ እንድትፈተኑ አይተዋችሁም፤
       ነገር ግን መውጫ መንገዱን ያዘጋጅላችኋል።
     </p>
+    <button class="copy-btn ui-btn ui-btn-inline ui-mini ui-corner-all ui-icon-action ui-btn-icon-left">Copy</button>
   </div>
 
   <div data-role="collapsible">
@@ -33,6 +36,7 @@
       ኀጢአታችንን ብንናዘዝ ኀጢአታችንን ይቅር ሊለን፣
       ከዐመፃም ሁሉ ሊያነጻን እርሱ ታማኝና ጻድቅ ነው።
     </p>
+    <button class="copy-btn ui-btn ui-btn-inline ui-mini ui-corner-all ui-icon-action ui-btn-icon-left">Copy</button>
   </div>
 
   <div data-role="collapsible">
@@ -43,6 +47,7 @@
       በመንገድህ ሁሉ እርሱን ዕወቅ፤
       እርሱም ጐዳናህን ቀና ያደርገዋል።
     </p>
+    <button class="copy-btn ui-btn ui-btn-inline ui-mini ui-corner-all ui-icon-action ui-btn-icon-left">Copy</button>
   </div>
 
 </div>
