--- a/5-assurance/en/index.html
+++ b/5-assurance/en/index.html
@@ -1,39 +1,29 @@
-             <div data-role="collapsible">
+<div data-role="collapsible">
+    <h3>Assurance Of Salvation - 1John 5፡11-12</h3>
+    <p>And this is the testimony: God has given us eternal life, and this life is in his Son. He who has the Son has life; he who does not have the Son of God does not have life.</p>
+    <button class="copy-btn ui-btn ui-btn-inline ui-mini ui-corner-all ui-icon-action ui-btn-icon-left">Copy</button>
+</div>
 
-			 <h3>Assurance Of Salvation - 1John 5፡11-12</h3>
+<div data-role="collapsible">
+    <h3>Assurance Of Answered Prayer - John 16:24</h3>
+    <p>Until now you have not asked for anything in my name. Ask and you will receive, and your joy will be complete.</p>
+    <button class="copy-btn ui-btn ui-btn-inline ui-mini ui-corner-all ui-icon-action ui-btn-icon-left">Copy</button>
+</div>
 
-			 <p>And this is the testimony: God has given us eternal life, and this life is in his Son. He who has the Son has life; he who does not have the Son of God does not have life.</p>
+<div data-role="collapsible">
+    <h3>Assurance Of Victory - 1 Corinthians 10፡13 </h3>
+    <p>No temptation has seized you except what is common to man. And God is faithful; he will not let you be tempted beyond what you can bear. But when you are tempted, he will also provide a way out so that you can stand up under it.</p>
+    <button class="copy-btn ui-btn ui-btn-inline ui-mini ui-corner-all ui-icon-action ui-btn-icon-left">Copy</button>
+</div>
 
-			</div>
+<div data-role="collapsible">
+    <h3>Assurance Of Forgiveness - 1 John 1፡9</h3>
+    <p>If we confess our sins, he is faithful and just and will forgive us our sins and purify us from all unrighteousness.</p>
+    <button class="copy-btn ui-btn ui-btn-inline ui-mini ui-corner-all ui-icon-action ui-btn-icon-left">Copy</button>
+</div>
 
-			<div data-role="collapsible">
-
-			 <h3>Assurance Of Answered Prayer - John 16:24</h3>
-
-			 <p>Until now you have not asked for anything in my name. Ask and you will receive, and your joy will be complete.</p>
-
-			</div>
-
-			<div data-role="collapsible">
-
-			 <h3>Assurance Of Victory - 1 Corinthians 10፡13 </h3>
-
-			 <p>No temptation has seized you except what is common to man. And God is faithful; he will not let you be tempted beyond what you can bear. But when you are tempted, he will also provide a way out so that you can stand up under it.</p>
-
-			</div>
-
-			<div data-role="collapsible">
-
-			 <h3>Assurance Of Forgiveness - 1 John 1፡9</h3>
-
-			 <p>If we confess our sins, he is faithful and just and will forgive us our sins and purify us from all unrighteousness.</p>
-
-			</div>
-
-			<div data-role="collapsible">
-
-			 <h3>Assurance Of Guidance - Proverbs 3፡ 5-6</h3>
-
-			 <p>Trust in the Lord with all your heart and lean not on your own understanding; in all your ways acknowledge him, and he will make your paths straight.</p>
-
-			</div>
+<div data-role="collapsible">
+    <h3>Assurance Of Guidance - Proverbs 3፡ 5-6</h3>
+    <p>Trust in the Lord with all your heart and lean not on your own understanding; in all your ways acknowledge him, and he will make your paths straight.</p>
+    <button class="copy-btn ui-btn ui-btn-inline ui-mini ui-corner-all ui-icon-action ui-btn-icon-left">Copy</button>
+</div>
