--- a/5-assurance/or/index.html
+++ b/5-assurance/or/index.html
@@ -1,28 +1,31 @@
-
 <div data-role="collapsible-set">
-            <div data-role="collapsible">
-			 <h3>Fayyina Mirkaneessuu - 1YOHANNIS 5፡ 11-12</h3>
-			 <p>Waaqayyo jireenya bara baraa nuuf kenne; egaa dhugaan isaa isa kana; jireenyi bara baraa kunis ilma isaa keessatti argama. Namni ilma Waaqayyoo qabaatu jireenyicha qaba; namni ilma Waaqayyoo hin qabaanne, jireenyicha hin qabu.</p>
-			</div>
+    <div data-role="collapsible">
+        <h3>Fayyina Mirkaneessuu - 1YOHANNIS 5፡ 11-12</h3>
+        <p>Waaqayyo jireenya bara baraa nuuf kenne; egaa dhugaan isaa isa kana; jireenyi bara baraa kunis ilma isaa keessatti argama. Namni ilma Waaqayyoo qabaatu jireenyicha qaba; namni ilma Waaqayyoo hin qabaanne, jireenyicha hin qabu.</p>
+        <button class="copy-btn ui-btn ui-btn-inline ui-mini ui-corner-all ui-icon-action ui-btn-icon-left">Copy</button>
+    </div>
 
-			<div data-role="collapsible">
-     		<h3>Mirkaneessa Kadhannaa deebii argate - YOHANNIS 16:24</h3>
-			<p>Hamma ammaatti isin maqaa kootiin waan tokko illee hin kadhanne; egaa gammachuun keessan guutuu akka ta'uuf kadhadhaa, in fudhattus! isaaniin jedhe.</p>
-			</div>
+    <div data-role="collapsible">
+        <h3>Mirkaneessa Kadhannaa deebii argate - YOHANNIS 16:24</h3>
+        <p>Hamma ammaatti isin maqaa kootiin waan tokko illee hin kadhanne; egaa gammachuun keessan guutuu akka ta'uuf kadhadhaa, in fudhattus! isaaniin jedhe.</p>
+        <button class="copy-btn ui-btn ui-btn-inline ui-mini ui-corner-all ui-icon-action ui-btn-icon-left">Copy</button>
+    </div>
 
-			<div data-role="collapsible">
-			<h3>Injifannoo Mirkaneessuu - 1 QORONTOS 10፡13 </h3>
-			<p>Qoramni namatti dhufee hin beekne isinitti hin dhufne. Waaqayyo amanamaa waan ta'eefis, humna keessan gara irraatti akka isin qoramtaniif isin hin dhiisu, garuu qorama sana keessatti akka isin dandeessan in godha, karaa isin keessaa baatanis isiniif in kenna.</p>
-			</div>
+    <div data-role="collapsible">
+        <h3>Injifannoo Mirkaneessuu - 1 QORONTOS 10፡13 </h3>
+        <p>Qoramni namatti dhufee hin beekne isinitti hin dhufne. Waaqayyo amanamaa waan ta'eefis, humna keessan gara irraatti akka isin qoramtaniif isin hin dhiisu, garuu qorama sana keessatti akka isin dandeessan in godha, karaa isin keessaa baatanis isiniif in kenna.</p>
+        <button class="copy-btn ui-btn ui-btn-inline ui-mini ui-corner-all ui-icon-action ui-btn-icon-left">Copy</button>
+    </div>
 
-			<div data-role="collapsible">
-			<h3>Dhiifama Mirkaneessuu - 1YOHANNIS 1፡9</h3>
-			<p>Cubbuu keenya yoo isatti himanne, inni amanamaa fi qajeelaa waan ta'eef, cubbuu keenya nuuf in dhiisa, jal'ina keenya hundumaattiis nu qulleessa. </p>
-			</div>
+    <div data-role="collapsible">
+        <h3>Dhiifama Mirkaneessuu - 1YOHANNIS 1፡9</h3>
+        <p>Cubbuu keenya yoo isatti himanne, inni amanamaa fi qajeelaa waan ta'eef, cubbuu keenya nuuf in dhiisa, jal'ina keenya hundumaattiis nu qulleessa. </p>
+        <button class="copy-btn ui-btn ui-btn-inline ui-mini ui-corner-all ui-icon-action ui-btn-icon-left">Copy</button>
+    </div>
 
-			<div data-role="collapsible">
-			<h3>Qajeelfama Mirkaneessuu - Fakkeenyaa 3፡ 5-6</h3>
-			<p>Garaa kee guutuu Waaqayyoon amanadhu, hubannaa ofii keetiitti hin hirkatin! 6Karaa kee hundumaatti isa yaadi, innis daandii kee siif in qajeelcha.</p>
-    		</div>
-
+    <div data-role="collapsible">
+        <h3>Qajeelfama Mirkaneessuu - Fakkeenyaa 3፡ 5-6</h3>
+        <p>Garaa kee guutuu Waaqayyoon amanadhu, hubannaa ofii keetiitti hin hirkatin! 6Karaa kee hundumaatti isa yaadi, innis daandii kee siif in qajeelcha.</p>
+        <button class="copy-btn ui-btn ui-btn-inline ui-mini ui-corner-all ui-icon-action ui-btn-icon-left">Copy</button>
+    </div>
 </div>
