--- a/index.html
+++ b/index.html
@@ -28,6 +28,10 @@
   <option value="or">Oromiffa</option>
   <option value="en">English</option>
 </select>
+    <div id="current-verse-display" style="margin: 15px 0; padding: 10px; border: 2px dashed #3388cc; border-radius: 8px; background: #f9f9f9; display: none;">
+    <small style="color: #3388cc; font-weight: bold;">CURRENTLY MEMORIZING:</small>
+    <div id="display-text" style="font-style: italic; margin-top: 5px;"></div>
+    </div>
 
 <!-- ================= AMHARIC ================= -->
 <div class="lang-content" data-lang="am">
