--- a/242-verses/en/index.html
+++ b/242-verses/en/index.html
@@ -19,7 +19,7 @@
 						 <h3>Can be assured - 1 John 5:11-12</h3>
 
 						 <p>And this is the testimony: God has given us eternal life, and this life is in his Son. He who has the Son has life; he who does not have the Son of God does not have life.</p>
-						 <label><input type="checkbox" class="current-verse-checkbox" data-verse-id=""> Memorizing Currently</label>
+						 <label><input type="checkbox" class="current-verse-checkbox" data-verse-id="1john-5-11-12"> Memorizing Currently</label>
                          <button class="copy-btn ui-btn ui-btn-inline ui-mini ui-corner-all ui-icon-action ui-btn-icon-left">Copy</button>
 					 </div>
 
@@ -28,7 +28,7 @@
 						 <h3>Assured of having eternal life - 1 John 5:13</h3>
 
 						 <p>I write these things to you who believe in the name of the Son of God so that you may know that you have eternal life.</p>
-						 <label><input type="checkbox" class="current-verse-checkbox" data-verse-id=""> Memorizing Currently</label>
+						 <label><input type="checkbox" class="current-verse-checkbox" data-verse-id="1john-5-13"> Memorizing Currently</label>
                         <button class="copy-btn ui-btn ui-btn-inline ui-mini ui-corner-all ui-icon-action ui-btn-icon-left">Copy</button>
 					 </div>
 
@@ -37,7 +37,7 @@
 						 <h3>Assured of having eternal life - John 6:47</h3>
 
 						 <p>I tell you the truth, he who believes has everlasting life.</p>
-						 <label><input type="checkbox" class="current-verse-checkbox" data-verse-id=""> Memorizing Currently</label>
+						 <label><input type="checkbox" class="current-verse-checkbox" data-verse-id="john-6-47"> Memorizing Currently</label>
 
 <button class="copy-btn ui-btn ui-btn-inline ui-mini ui-corner-all ui-icon-action ui-btn-icon-left">Copy</button>
 					 </div>
@@ -47,7 +47,7 @@
 						 <h3>Forgiveness of sin - Ephesians 1:7</h3>
 
 						 <p>In him we have redemption through his blood, the forgiveness of sins, in accordance with the riches of God's grace</p>
-						 						 <label><input type="checkbox" class="current-verse-checkbox" data-verse-id=""> Memorizing Currently</label>
+						 						 <label><input type="checkbox" class="current-verse-checkbox" data-verse-id="ephesian-1-7"> Memorizing Currently</label>
 
 <button class="copy-btn ui-btn ui-btn-inline ui-mini ui-corner-all ui-icon-action ui-btn-icon-left">Copy</button>
 					 </div>
@@ -57,7 +57,7 @@
 						 <h3>Forgiveness of sin - Romans 8:1</h3>
 
 						 <p>Therefore, there is now no condemnation for those who are in Christ Jesus, </p>
-						 						 <label><input type="checkbox" class="current-verse-checkbox" data-verse-id=""> Memorizing Currently</label>
+						 						 <label><input type="checkbox" class="current-verse-checkbox" data-verse-id="romans-8-1"> Memorizing Currently</label>
 
 <button class="copy-btn ui-btn ui-btn-inline ui-mini ui-corner-all ui-icon-action ui-btn-icon-left">Copy</button>
 					 </div>
@@ -67,7 +67,7 @@
 						 <h3>Justified - Romans 3:24</h3>
 
 						 <p>and are justified freely by his grace through the redemption that came by Christ Jesus.</p>
-						 						 <label><input type="checkbox" class="current-verse-checkbox" data-verse-id=""> Memorizing Currently</label>
+						 						 <label><input type="checkbox" class="current-verse-checkbox" data-verse-id="romans-3-24"> Memorizing Currently</label>
 
 <button class="copy-btn ui-btn ui-btn-inline ui-mini ui-corner-all ui-icon-action ui-btn-icon-left">Copy</button>
 					 </div>
@@ -77,7 +77,7 @@
 						 <h3>Justified - Romans 5:1</h3>
 
 						 <p>Therefore, since we have been justified through faith, we have peace with God through our Lord Jesus Christ,</p>
-						 						 <label><input type="checkbox" class="current-verse-checkbox" data-verse-id=""> Memorizing Currently</label>
+						 						 <label><input type="checkbox" class="current-verse-checkbox" data-verse-id="romans-5-1"> Memorizing Currently</label>
 
 <button class="copy-btn ui-btn ui-btn-inline ui-mini ui-corner-all ui-icon-action ui-btn-icon-left">Copy</button>
 					 </div>
@@ -87,7 +87,7 @@
 						 <h3>Born again in Christ - 1 Peter 1:3</h3>
 
 						 <p>Praise be to the God and Father of our Lord Jesus Christ! In his great mercy he has given us new birth into a living hope through the resurrection of Jesus Christ from the dead,</p>
-						  						 <label><input type="checkbox" class="current-verse-checkbox" data-verse-id=""> Memorizing Currently</label>
+						  						 <label><input type="checkbox" class="current-verse-checkbox" data-verse-id="1peter-1-3"> Memorizing Currently</label>
 
 <button class="copy-btn ui-btn ui-btn-inline ui-mini ui-corner-all ui-icon-action ui-btn-icon-left">Copy</button>
 					 </div>
@@ -97,7 +97,7 @@
 						 <h3>Born again in Christ - Titus 3:5</h3>
 
 						 <p>he saved us, not because of righteous things we had done, but because of his mercy. He saved us through the washing of rebirth and renewal by the Holy Spirit,</p>
-						  						 <label><input type="checkbox" class="current-verse-checkbox" data-verse-id=""> Memorizing Currently</label>
+						  						 <label><input type="checkbox" class="current-verse-checkbox" data-verse-id="titus-3-5"> Memorizing Currently</label>
 
 <button class="copy-btn ui-btn ui-btn-inline ui-mini ui-corner-all ui-icon-action ui-btn-icon-left">Copy</button>
 					 </div>
@@ -107,6 +107,8 @@
 						 <h3>Being children of God - Galatians 3:26</h3>
 
 						 <p>You are all sons of God through faith in Christ Jesus,</p>
+						 <label><input type="checkbox" class="current-verse-checkbox" data-verse-id="galatia-3-26"> Memorizing Currently</label>
+
 <button class="copy-btn ui-btn ui-btn-inline ui-mini ui-corner-all ui-icon-action ui-btn-icon-left">Copy</button>
 					 </div>
 
@@ -115,6 +117,8 @@
 						 <h3>Being children of God - Romans 8:14</h3>
 
 						 <p>because those who are led by the Spirit of God are sons of God.</p>
+						 <label><input type="checkbox" class="current-verse-checkbox" data-verse-id="romans-8-14"> Memorizing Currently</label>
+
 <button class="copy-btn ui-btn ui-btn-inline ui-mini ui-corner-all ui-icon-action ui-btn-icon-left">Copy</button>
 					 </div>
 
@@ -123,7 +127,7 @@
 						 <h3>Holy Spirit living in Believers - Romans 8:9</h3>
 
 						 <p>You, however, are controlled not by the sinful nature but by the Spirit, if the Spirit of God lives in you. And if anyone does not have the Spirit of Christ, he does not belong to Christ.</p>
-						 						 <label><input type="checkbox" class="current-verse-checkbox" data-verse-id=""> Memorizing Currently</label>
+						 <label><input type="checkbox" class="current-verse-checkbox" data-verse-id="romans-8-9"> Memorizing Currently</label>
 
 <button class="copy-btn ui-btn ui-btn-inline ui-mini ui-corner-all ui-icon-action ui-btn-icon-left">Copy</button>
 					 </div>
@@ -133,7 +137,7 @@
 						 <h3>Holy Spirit living in Believers - John 14:16-17</h3>
 
 						 <p>And I will ask the Father, and he will give you another Counselor to be with you forever-- the Spirit of truth. The world cannot accept him, because it neither sees him nor knows him. But you know him, for he lives with you and will be in you.</p>
-						 						 <label><input type="checkbox" class="current-verse-checkbox" data-verse-id=""> Memorizing Currently</label>
+						 <label><input type="checkbox" class="current-verse-checkbox" data-verse-id="john-14-16"> Memorizing Currently</label>
 
 <button class="copy-btn ui-btn ui-btn-inline ui-mini ui-corner-all ui-icon-action ui-btn-icon-left">Copy</button>
 					 </div>
@@ -143,7 +147,7 @@
 						 <h3>Salvation never to be lost - John 10:28-29</h3>
 
 						 <p>I give them eternal life, and they shall never perish; no one can snatch them out of my hand. My Father, who has given them to me, is greater than all ; no one can snatch them out of my Father's hand.</p>
-						 						 <label><input type="checkbox" class="current-verse-checkbox" data-verse-id=""> Memorizing Currently</label>
+						 						 <label><input type="checkbox" class="current-verse-checkbox" data-verse-id="john-10-28-29"> Memorizing Currently</label>
 
 <button class="copy-btn ui-btn ui-btn-inline ui-mini ui-corner-all ui-icon-action ui-btn-icon-left">Copy</button>
 					 </div>
@@ -153,7 +157,7 @@
 						 <h3>Salvation never to be lost - Romans 8:39</h3>
 
 						 <p>neither height nor depth, nor anything else in all creation, will be able to separate us from the love of God that is in Christ Jesus our Lord.</p>
-						 						 <label><input type="checkbox" class="current-verse-checkbox" data-verse-id=""> Memorizing Currently</label>
+						 						 <label><input type="checkbox" class="current-verse-checkbox" data-verse-id="romans-8-39"> Memorizing Currently</label>
 
 <button class="copy-btn ui-btn ui-btn-inline ui-mini ui-corner-all ui-icon-action ui-btn-icon-left">Copy</button>
 					 </div>
@@ -163,7 +167,7 @@
 						 <h3>Assurance based on the Word - 1 Peter 1:23</h3>
 
 						 <p>For you have been born again, not of perishable seed, but of imperishable, through the living and enduring word of God.</p>
-						 						 <label><input type="checkbox" class="current-verse-checkbox" data-verse-id=""> Memorizing Currently</label>
+						 						 <label><input type="checkbox" class="current-verse-checkbox" data-verse-id="1-peter-1-23"> Memorizing Currently</label>
 
 <button class="copy-btn ui-btn ui-btn-inline ui-mini ui-corner-all ui-icon-action ui-btn-icon-left">Copy</button>
 					 </div>
@@ -173,7 +177,7 @@
 						 <h3>Assurance based on the Word - Ephesians 1:13</h3>
 
 						 <p>And you also were included in Christ when you heard the word of truth, the gospel of your salvation. Having believed, you were marked in him with a seal, the promised Holy Spirit,</p>
-						 						 <label><input type="checkbox" class="current-verse-checkbox" data-verse-id=""> Memorizing Currently</label>
+						 						 <label><input type="checkbox" class="current-verse-checkbox" data-verse-id="ephesian-1-13"> Memorizing Currently</label>
 
 <button class="copy-btn ui-btn ui-btn-inline ui-mini ui-corner-all ui-icon-action ui-btn-icon-left">Copy</button>
 					 </div>
@@ -191,7 +195,7 @@
 							 <h3>God wants to fellowship with us - 1 Corinthians 1:9</h3>
 
 							 <p>God, who has called you into fellowship with his Son Jesus Christ our Lord, is faithful.</p>
-													 <label><input type="checkbox" class="current-verse-checkbox" data-verse-id=""> Memorizing Currently</label>
+													 <label><input type="checkbox" class="current-verse-checkbox" data-verse-id="1cor-1-9"> Memorizing Currently</label>
 
 <button class="copy-btn ui-btn ui-btn-inline ui-mini ui-corner-all ui-icon-action ui-btn-icon-left">Copy</button>
 							</div>
@@ -201,7 +205,7 @@
 							 <h3>God wants to fellowship with us - Isaiah 30:18 </h3>
 
 							 <p>Yet the LORD longs to be gracious to you; he rises to show you compassion. For the LORD is a God of justice. Blessed are all who wait for him!</p>
-														 <label><input type="checkbox" class="current-verse-checkbox" data-verse-id=""> Memorizing Currently</label>
+														 <label><input type="checkbox" class="current-verse-checkbox" data-verse-id="isaiah-30-18"> Memorizing Currently</label>
 
 <button class="copy-btn ui-btn ui-btn-inline ui-mini ui-corner-all ui-icon-action ui-btn-icon-left">Copy</button>
 							</div>
@@ -211,7 +215,7 @@
 							 <h3>God's command - Isaiah 55:6</h3>
 
 							 <p>Seek the LORD while he may be found; call on him while he is near.</p>
-														 <label><input type="checkbox" class="current-verse-checkbox" data-verse-id=""> Memorizing Currently</label>
+														 <label><input type="checkbox" class="current-verse-checkbox" data-verse-id="isaiah-55-6"> Memorizing Currently</label>
 
 <button class="copy-btn ui-btn ui-btn-inline ui-mini ui-corner-all ui-icon-action ui-btn-icon-left">Copy</button>
 							</div>
